fixed some layout issues in HomePage

--- a/client/src/fonts.css
+++ b/client/src/fonts.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Grechen+Fuemen&display=swap');
 
 h1,
@@ -5,13 +6,14 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6 { 
     font-family: 'Grechen Fuemen', cursive;
-   color: red !important;
+    /* font-family: 'Bangers', cursive; */
+    /* color: red !important; */
 }
 
 p, a {
     font-family: 'Grechen Fuemen', cursive;
-    color: red !important;
+    /* color: red !important; */
 }
 
